[package]
name = "queryer"
version = "0.1.0"
authors = ["unicodingunicorn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
futures = "0.3"
lazy_static = "1.0"
log = "0.4.0"
regex = "1.3.9"
reqwest = { version = "0.10", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = [ "macros" ] }
warp = "0.2"
